# ramayana-engine

./: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
docs/plans/: 2026-02-05-ramayana-studio-design.md
episodes/: ep01_sita_swayamvar.json
pipeline/: assembler.py  audio_mixer.py  cli.py  models.py  narration.py  recorder.py  script_parser.py
renderer/: index.html
renderer/src/: main.ts
renderer/src/engine/: AudioCueEmitter.ts  Background.ts  Camera.ts  CharacterSprite.ts  PropManager.ts  SceneManager.ts  Timeline.ts  TransitionFX.ts
renderer/src/engine/art/: background.ts  palette.ts  props.ts  vignette.ts
renderer/src/engine/art/characters/: base.ts  index.ts  janaka.ts  king_generic.ts  rama.ts  sita.ts  vishwamitra.ts
