[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramayana-engine"
version = "0.1.0"
description = "Pipeline for rendering narrated 2D animated Ramayana episodes"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=6.1.0",
    "playwright>=1.40.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ramayana-engine = "pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["pipeline*"]
